修正退水機制邏輯 - 解決概念混淆問題
- 修正問題根源：原本邏輯完全顛倒，parent指上級代理，agent指下級代理
- 全拿退水(all)：上級代理拿走所有退水，下級代理rebate_percentage=0%
- 全退下級(none)：上級代理不拿退水，下級代理rebate_percentage=最大值
- 按比例分配(percentage)：下級代理拿設定比例，其餘歸上級代理
- 簡化分配邏輯：直接根據rebate_percentage進行分配，移除複雜mode判斷
- 更新前端介面說明文字，使邏輯更清晰
- 創建測試腳本驗證邏輯正確性
- 修改範圍：agentBackend.js, backend.js, frontend及deploy版本

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -975,9 +975,9 @@
                                                 <div class="mb-3">
                                                     <label class="form-label">退水模式</label>
                                                     <select class="form-select" v-model="newAgent.rebate_mode" required>
-                                                        <option value="all">全拿所有退水（不讓下線拿退水）</option>
-                                                        <option value="percentage">设定具體比例（其餘歸上級）</option>
-                                                        <option value="none">全退給下級（所有退水都給下級）</option>
+                                                        <option value="all">全拿退水（本代理拿走所有退水）</option>
+                                                        <option value="percentage">按比例分配（本代理分得設定比例）</option>
+                                                        <option value="none">全退下級（本代理不拿，全給下級代理）</option>
                                                     </select>
                                                     <small class="form-text text-muted">退水分配方式</small>
                                                 </div>
@@ -1037,9 +1037,9 @@
                                         <div class="mb-3">
                                             <label class="form-label">退水模式</label>
                                             <select class="form-select" v-model="rebateSettings.rebate_mode" required>
-                                                <option value="all">全拿所有退水</option>
-                                                <option value="percentage">设定具體比例</option>
-                                                <option value="none">全退給下級</option>
+                                                <option value="all">全拿退水</option>
+                                                <option value="percentage">按比例分配</option>
+                                                <option value="none">全退下級</option>
                                             </select>
                                         </div>
                                         <div class="mb-3" v-if="rebateSettings.rebate_mode === 'percentage'">
