修復表格響應式設計和開獎紀錄功能
- 移除NT貨幣符號，統一使用$符號
- 修復下注餘額跳動問題，移除前端預先扣款邏輯
- 新增開獎紀錄小視窗功能，可查看最近10期開獎
- 修復限紅規定表格跑格問題，改善響應式設計
- 優化表格在各種螢幕尺寸下的顯示效果

--- a/profit-table-test.html
+++ b/profit-table-test.html
@@ -282,8 +282,8 @@
                         <div class="weekday-label">星期三</div>
                     </div>
                     <div class="row-cell bet-count-cell">3注</div>
-                    <div class="row-cell amount-cell">NT$300</div>
-                    <div class="row-cell profit-cell profit-negative">-NT$300</div>
+                    <div class="row-cell amount-cell">$300</div>
+                    <div class="row-cell profit-cell profit-negative">-$300</div>
                 </div>
                 
                 <div class="table-row">
@@ -292,8 +292,8 @@
                         <div class="weekday-label">星期四</div>
                     </div>
                     <div class="row-cell bet-count-cell">15注</div>
-                    <div class="row-cell amount-cell">NT$125,000</div>
-                    <div class="row-cell profit-cell profit-positive">+NT$85,500</div>
+                    <div class="row-cell amount-cell">$125,000</div>
+                    <div class="row-cell profit-cell profit-positive">+$85,500</div>
                 </div>
             </div>
         </div>
