修復下注扣款競態條件問題
- 創建原子性扣款函數（safe_bet_deduction、batch_bet_deduction、atomic_update_member_balance）
- 修改 MemberModel.updateBalance 使用原子性更新函數
- 新增批量扣款 API 支援多筆同時下注
- 使用 PostgreSQL FOR UPDATE 行級鎖防止並發競態
- 創建測試腳本驗證並發扣款功能
- 添加下注鎖定表防止重複下注
- 提供降級處理機制確保向後兼容性

解決問題：
- 下注700只扣400的餘額不一致問題
- 多筆並發下注時的競態條件
- 提升扣款操作的原子性和可靠性

--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -8521,9 +8521,10 @@
                             if (data.success && Array.isArray(data.records)) {
                                 this.recentDrawHistory = data.records.map(record => ({
                                     period: this.formatPeriodDisplay(record.period),
-                                    results: record.results || []
+                                    results: record.result || []  // 修正：使用 result 而不是 results
                                 }));
                                 console.log('開獎紀錄載入成功，記錄數量:', this.recentDrawHistory.length);
+                                console.log('第一筆記錄:', this.recentDrawHistory[0]);
                             } else {
                                 console.error('開獎紀錄API返回異常數據格式:', data);
                                 this.recentDrawHistory = [];
