--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2099,7 +2099,7 @@
             box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
             z-index: 9999;
             width: 90%;
-            max-width: 450px;
+            max-width: 600px;
             max-height: 80vh;
             overflow: hidden;
             opacity: 0;
@@ -2167,15 +2167,16 @@
             color: #666;
             font-size: 12px;
             margin-right: 15px;
-            min-width: 60px;
+            min-width: 80px;
             font-weight: 500;
         }
 
         .history-numbers {
             display: flex;
-            gap: 4px;
+            gap: 6px;
             flex: 1;
-            flex-wrap: wrap;
+            flex-wrap: nowrap;
+            align-items: center;
         }
 
         /* 🔥 開獎紀錄中的球號樣式 - 確保在白色背景下正確顯示 */
