修復龍虎控制和盈虧記錄顯示問題
1. 龍虎控制核心修復：
   - 在generateWeightedResult函數中添加龍虎控制檢查邏輯
   - 檢測所有位置的極端權重差異，主動重新生成開獎結果
   - 支援所有位置組合的龍虎對比（如第4名vs第7名等）

2. 盈虧記錄顯示優化：
   - 修復灰底白字顯示不清楚問題，改為透明白色背景
   - 添加backdrop-filter模糊效果和邊框
   - 改善數據顯示，防止空值顯示

3. 同步修復前端和部署版本

--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -3291,14 +3291,16 @@
             color: #6c757d;
         }
 
-        /* 盈虧記錄表格 - Table布局重構版本 v3.0 */
+        /* 盈虧記錄表格 - Table布局重構版本 v4.0 */
         .weekly-profit-content {
             width: 100% !important;
             overflow-x: auto !important;
-            background: rgba(0,0,0,0.3) !important;
+            background: rgba(255,255,255,0.12) !important;
             border-radius: 8px !important;
             padding: 15px !important;
             box-sizing: border-box !important;
+            backdrop-filter: blur(5px) !important;
+            border: 1px solid rgba(255,255,255,0.3) !important;
         }
 
         .weekly-table-header {
@@ -6139,8 +6141,8 @@
                                 <div class="date-number">{{ formatDateNumber(record.date) }}</div>
                                 <div class="weekday-label">{{ record.weekday || getWeekday(record.date) }}</div>
                             </div>
-                            <div class="row-cell bet-count-cell">{{ record.betCount }}注</div>
-                            <div class="row-cell amount-cell">{{ record.totalBet ? formatMoney(record.totalBet) : '0' }}</div>
+                            <div class="row-cell bet-count-cell">{{ record.betCount || 0 }}注</div>
+                            <div class="row-cell amount-cell">{{ formatMoney(record.totalBet || 0) }}</div>
                             <div class="row-cell profit-cell" :class="{ 
                                 'profit-positive': record.profit > 0, 
                                 'profit-negative': record.profit < 0,
