--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3291,20 +3291,22 @@
             color: #6c757d;
         }
 
-        /* 盈虧記錄表格 - Table布局重構版本 v3.0 */
+        /* 盈虧記錄表格 - Table布局重構版本 v4.0 */
         .weekly-profit-content {
             width: 100% !important;
             overflow-x: auto !important;
-            background: rgba(0,0,0,0.3) !important;
+            background: rgba(255,255,255,0.12) !important;
             border-radius: 8px !important;
             padding: 15px !important;
             box-sizing: border-box !important;
+            backdrop-filter: blur(5px) !important;
+            border: 1px solid rgba(255,255,255,0.3) !important;
         }
 
         .weekly-table-header {
             display: table !important;
             width: 100% !important;
-            background: rgba(255,255,255,0.1) !important;
+            background: rgba(255,255,255,0.15) !important;
             border-radius: 6px 6px 0 0 !important;
             table-layout: fixed !important;
         }
@@ -6017,8 +6019,8 @@
                                 <div class="date-number">{{ formatDateNumber(record.date) }}</div>
                                 <div class="weekday-label">{{ record.weekday || getWeekday(record.date) }}</div>
                             </div>
-                            <div class="row-cell bet-count-cell">{{ record.betCount }}注</div>
-                            <div class="row-cell amount-cell">{{ record.totalBet ? formatMoney(record.totalBet) : '0' }}</div>
+                            <div class="row-cell bet-count-cell">{{ record.betCount || 0 }}注</div>
+                            <div class="row-cell amount-cell">{{ formatMoney(record.totalBet || 0) }}</div>
                             <div class="row-cell profit-cell" :class="{ 
                                 'profit-positive': record.profit > 0, 
                                 'profit-negative': record.profit < 0,
