修復賠率計算系統：使用精確數學公式動態計算A盤D盤賠率
🔧 核心修復：
- 後端：使用正確公式計算賠率配置（10×(1-退水率) 和 2×(1-退水率)）
- 前端：修復基礎賠率數值，從錯誤的1.96改為2.0
- 賠率組件：同步修復所有賠率計算邏輯

📊 正確賠率：
- A盤（1.1%退水）：單號9.89，兩面1.978，龍虎1.978
- D盤（4.1%退水）：單號9.59，兩面1.918，龍虎1.918

✅ 修復範圍：
- backend.js 和 deploy/backend.js 的盤口配置
- frontend 和 deploy/frontend 的所有賠率顯示
- Vue應用的updateOddsDisplay函數
- getBetOdds和getCorrectOdds函數
- 下注清單和注單記錄賠率同步

現在A盤D盤賠率顯示完全正確，符合數學期望值為0的公平原則。

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7856,12 +7856,12 @@
                         // A盤配置：1.1%退水
                         rebatePercentage = 0.011;
                         baseNumberOdds = 10.0;  // A盤基礎單號賠率
-                        baseTwoSideOdds = 1.96; // A盤基礎兩面賠率
+                        baseTwoSideOdds = 2.0; // A盤基礎兩面賠率：2×(1-0.011)=1.978
                     } else {
                         // D盤配置：4.1%退水  
                         rebatePercentage = 0.041;
                         baseNumberOdds = 10.0;  // D盤基礎單號賠率
-                        baseTwoSideOdds = 1.96; // D盤基礎兩面賠率
+                        baseTwoSideOdds = 2.0; // D盤基礎兩面賠率：2×(1-0.041)=1.918
                     }
                     
                     if (bet.type === 'number') {
