修復前端顯示問題：盈虧記錄欄位標題可見性與漢堡選單閃現問題
- 修復盈虧記錄表格頭部顏色：改為深色文字配淺色背景，確保標題可見
- 修復漢堡選單今日盈虧閃現問題：移除點擊時立即更新，改用定期更新機制
- 在每10秒的定期更新中添加updateDailyProfit()，確保今日盈虧數據始終最新
- 同步修復frontend和deploy版本

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3316,10 +3316,10 @@
             padding: 12px 8px !important;
             text-align: center !important;
             font-weight: bold !important;
-            color: rgba(255,255,255,0.9) !important;
-            border-bottom: 2px solid rgba(255,255,255,0.2) !important;
+            color: #333 !important;
+            border-bottom: 2px solid #ddd !important;
             vertical-align: middle !important;
-            background: rgba(255,255,255,0.05) !important;
+            background: #f8f9fa !important;
         }
 
         .weekly-table-body {
@@ -7222,10 +7222,8 @@
                     this.showDropdownMenu = !this.showDropdownMenu;
                     console.log('🍔 漢堡菜單新狀態:', this.showDropdownMenu);
                     
-                    // 如果打開選單，立即更新今日盈亏
-                    if (this.showDropdownMenu) {
-                        this.updateDailyProfit();
-                    }
+                    // 移除立即更新，因為數據應該在初始化時就是最新的
+                    // 如果需要更新，讓定期更新機制處理
                 },
                 updateGameData() {
                     console.log('开始获取游戏數據...');
@@ -8490,6 +8488,8 @@
                         this.updateBalance();
                         this.updateBetHistory();
                         this.updateDailyStats();
+                        // 同時更新今日盈虧（從API獲取最新數據）
+                        this.updateDailyProfit();
                     }, 10000);
                     
                     // 每5秒更新历史记录以确保即时性
