修復盈虧記錄表格內容顏色顯示問題
- 修復表格行(.row-cell)文字顏色從白色改為深色(#333)
- 修復日期欄位(.date-number)顏色和背景
- 修復注數欄位(.bet-count-cell)和金額欄位(.amount-cell)顏色
- 確保所有表格內容都清晰可見
- 同步修復frontend和deploy版本

--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -3344,7 +3344,8 @@
             padding: 10px 8px !important;
             text-align: center !important;
             vertical-align: middle !important;
-            border-bottom: 1px solid rgba(255,255,255,0.05) !important;
+            border-bottom: 1px solid #ddd !important;
+            color: #333 !important;
         }
 
         /* 確保各欄位寬度一致 */
@@ -3378,13 +3379,13 @@
 
         /* 注數欄位樣式 */
         .bet-count-cell {
-            color: rgba(255,255,255,0.8) !important;
+            color: #333 !important;
             font-size: 13px !important;
         }
 
         /* 金額欄位樣式 */
         .amount-cell {
-            color: rgba(255,255,255,0.8) !important;
+            color: #333 !important;
             font-size: 13px !important;
         }
 
