--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3344,7 +3344,8 @@
             padding: 10px 8px !important;
             text-align: center !important;
             vertical-align: middle !important;
-            border-bottom: 1px solid rgba(255,255,255,0.05) !important;
+            border-bottom: 1px solid #ddd !important;
+            color: #333 !important;
         }
 
         /* 確保各欄位寬度一致 */
@@ -3362,9 +3363,9 @@
             display: block !important;
             font-size: 14px !important;
             font-weight: bold !important;
-            color: #fff !important;
+            color: #333 !important;
             margin-bottom: 3px !important;
-            background: rgba(255,255,255,0.1) !important;
+            background: #e9ecef !important;
             padding: 3px 6px !important;
             border-radius: 3px !important;
             display: inline-block !important;
@@ -3372,19 +3373,19 @@
 
         .weekday-label {
             font-size: 10px !important;
-            color: rgba(255,255,255,0.6) !important;
+            color: #666 !important;
             display: block !important;
         }
 
         /* 注數欄位樣式 */
         .bet-count-cell {
-            color: rgba(255,255,255,0.8) !important;
+            color: #333 !important;
             font-size: 13px !important;
         }
 
         /* 金額欄位樣式 */
         .amount-cell {
-            color: rgba(255,255,255,0.8) !important;
+            color: #333 !important;
             font-size: 13px !important;
         }
 
