--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3291,7 +3291,7 @@
             color: #6c757d;
         }
 
-        /* 盈虧記錄表格 - Table布局重構版本 v4.0 */
+        /* 盈虧記錄表格 - Table布局重構版本 v4.1 修復對齊和顏色 */
         .weekly-profit-content {
             width: 100% !important;
             overflow-x: auto !important;
@@ -3348,11 +3348,25 @@
             color: #333 !important;
         }
 
-        /* 確保各欄位寬度一致 */
-        .header-cell:nth-child(1), .row-cell:nth-child(1) { width: 25% !important; }
-        .header-cell:nth-child(2), .row-cell:nth-child(2) { width: 20% !important; }
-        .header-cell:nth-child(3), .row-cell:nth-child(3) { width: 25% !important; }
-        .header-cell:nth-child(4), .row-cell:nth-child(4) { width: 30% !important; }
+        /* 確保各欄位寬度一致和內容對齊 */
+        .header-cell:nth-child(1), .row-cell:nth-child(1) { 
+            width: 25% !important; 
+            text-align: center !important;
+        }
+        .header-cell:nth-child(2), .row-cell:nth-child(2) { 
+            width: 20% !important; 
+            text-align: center !important;
+        }
+        .header-cell:nth-child(3), .row-cell:nth-child(3) { 
+            width: 25% !important; 
+            text-align: right !important;
+            padding-right: 12px !important;
+        }
+        .header-cell:nth-child(4), .row-cell:nth-child(4) { 
+            width: 30% !important; 
+            text-align: right !important;
+            padding-right: 12px !important;
+        }
 
         /* 日期欄位樣式 */
         .date-cell {
@@ -3381,18 +3395,39 @@
         .bet-count-cell {
             color: #333 !important;
             font-size: 13px !important;
+            text-align: center !important;
         }
 
-        /* 金額欄位樣式 */
+        /* 金額欄位樣式 - 右對齊 */
         .amount-cell {
             color: #333 !important;
             font-size: 13px !important;
+            text-align: right !important;
+            font-family: 'Courier New', monospace !important;
         }
 
-        /* 盈虧欄位樣式 */
+        /* 盈虧欄位樣式 - 右對齊並加強顏色對比 */
         .profit-cell {
             font-weight: bold !important;
             font-size: 14px !important;
+            text-align: right !important;
+            font-family: 'Courier New', monospace !important;
+        }
+
+        /* 盈虧顏色 - 加強對比度 */
+        .profit-cell.profit-positive {
+            color: #198754 !important; /* 更深的綠色 */
+            font-weight: 700 !important;
+        }
+
+        .profit-cell.profit-negative {
+            color: #dc3545 !important; /* 紅色 */
+            font-weight: 700 !important;
+        }
+
+        .profit-cell.profit-zero {
+            color: #6c757d !important; /* 灰色 */
+            font-weight: 600 !important;
         }
 
         /* 響應式設計 */
@@ -3421,6 +3456,13 @@
 
             .profit-cell {
                 font-size: 12px !important;
+            }
+
+            /* 手機版金額欄位右對齊 */
+            .header-cell:nth-child(3), .row-cell:nth-child(3),
+            .header-cell:nth-child(4), .row-cell:nth-child(4) {
+                text-align: right !important;
+                padding-right: 8px !important;
             }
         }
 
