--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8869,8 +8869,13 @@
                         const originalText = ball.getAttribute('data-original-text');
                         if (originalText && originalText !== '?') {
                             ball.textContent = originalText;
+                            // 🎨 重新設置正確的顏色CSS class
+                            ball.className = `number-ball color-${originalText}`;
                         } else if (this.lastResults && this.lastResults.length > index) {
-                            ball.textContent = this.lastResults[index];
+                            const number = this.lastResults[index];
+                            ball.textContent = number;
+                            // 🎨 重新設置正確的顏色CSS class
+                            ball.className = `number-ball color-${number}`;
                         }
                     });
                     
@@ -9032,8 +9037,11 @@
                             resultBalls.forEach((ball, index) => {
                                 setTimeout(() => {
                                     if (latestResult.length > index) {
-                                        ball.textContent = latestResult[index];
-                                        ball.setAttribute('data-original-text', latestResult[index]);
+                                        const number = latestResult[index];
+                                        ball.textContent = number;
+                                        ball.setAttribute('data-original-text', number);
+                                        // 🎨 重新設置正確的顏色CSS class
+                                        ball.className = `number-ball color-${number}`;
                                         ball.style.animation = 'ballReveal 0.5s ease-out';
                                     }
                                 }, index * 150);
@@ -9045,6 +9053,8 @@
                                 const originalText = ball.getAttribute('data-original-text');
                                 if (originalText && originalText !== '?') {
                                     ball.textContent = originalText;
+                                    // 🎨 重新設置正確的顏色CSS class
+                                    ball.className = `number-ball color-${originalText}`;
                                 }
                             });
                         }
