修復球號顏色混亂問題，確保每個號碼顯示正確顏色
問題：
- 第6名球顯示綠色（10號顏色）但數字不是10
- 洗球動畫結束後球號碼與顏色不匹配
- 只設置textContent未設置正確CSS class

修復：
- stopDrawEffect函數同時設置textContent和className
- 確保ball.className = 'number-ball color-{number}'
- 修復兩個設置號碼的位置
- frontend和deploy版本統一修復

效果：
- 每個號碼球正確顯示專屬顏色
- 1號金黃色、2號藍色、3號灰色等
- 不再出現顏色混亂現象

--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -9066,13 +9066,16 @@
                         setTimeout(() => {
                             // 使用最新获取的结果
                             if (this.lastResults && this.lastResults.length > index) {
-                                ball.textContent = this.lastResults[index];
+                                const number = this.lastResults[index];
+                                ball.textContent = number;
+                                ball.className = `number-ball color-${number}`;
                                 console.log(`🎯 顯示第${index+1}位结果`);
                             } else {
                                 // 恢恢复始數字（如果沒有新结果）
                                 const originalText = ball.getAttribute('data-original-text');
                                 if (originalText) {
                                     ball.textContent = originalText;
+                                    ball.className = `number-ball color-${originalText}`;
                                     console.log(`⚠️ 使用原始數字: ${originalText}`);
                                 }
                             }
