--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -3497,7 +3497,7 @@
             .profit-records-simple {
                 margin: 10px;
                 width: calc(100% - 20px);
-                max-height: 95vh;
+                /* 移除max-height限制，讓視窗完整顯示一週數據 */
             }
 
             .simple-header {
@@ -4013,6 +4013,12 @@
             animation: modalSlideIn 0.3s ease-out;
             position: relative;
         }
+
+        /* 盈虧記錄專用樣式 - 移除高度限制 */
+        .modal > .profit-records-simple {
+            max-height: none !important;
+            overflow-y: visible !important;
+        }
         
         @keyframes modalSlideIn {
             from {
@@ -4175,6 +4181,12 @@
             .modal > div {
                 max-width: 100%;
                 max-height: 90vh;
+            }
+
+            /* 手機版盈虧記錄專用樣式 - 移除高度限制 */
+            .modal > .profit-records-simple {
+                max-height: none !important;
+                overflow-y: visible !important;
             }
             
             .bet-records,
